Fix CORS policy by allowing Vercel sandbox domain and flexible origin patterns